--- a/.github/workflows/golang.yaml
+++ b/.github/workflows/golang.yaml
@@ -6,67 +6,81 @@ on:
   pull_request:
     branches: [ master ]
   release:
-    types: [ 'created' ]
+    types: [ created ]
+
 env:
   PROJECT_NAME: certstream
+
 jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: 'stable'
+
+      - name: Get dependencies
+        run: go mod download
+
+      - name: Build Binaries
+        env:
+          CGO_ENABLED: 0
+        run: |
+          mkdir -p bin
+          
+          # Linux
+          GOOS=linux GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-32 -v ./cmd/${PROJECT_NAME}
+          GOOS=linux GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-64 -v ./cmd/${PROJECT_NAME}
+          GOOS=linux GOARCH=arm GOARM=7 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-arm7 -v ./cmd/${PROJECT_NAME}
+          GOOS=linux GOARCH=arm GOARM=6 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-arm6 -v ./cmd/${PROJECT_NAME}
+          
+          # FreeBSD
+          GOOS=freebsd GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-freebsd-64 -v ./cmd/${PROJECT_NAME}
+          GOOS=freebsd GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-freebsd-32 -v ./cmd/${PROJECT_NAME}
+          
+          # MacOS (Darwin)
+          GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-osx -v ./cmd/${PROJECT_NAME}
+          # Note: You might want to add darwin/arm64 for Apple Silicon here
+          
+          # Windows
+          GOOS=windows GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-win64.exe -v ./cmd/${PROJECT_NAME}
+          GOOS=windows GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-win32.exe -v ./cmd/${PROJECT_NAME}
+          
+          # NetBSD
+          GOOS=netbsd GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-netbsd-64 -v ./cmd/${PROJECT_NAME}
+          GOOS=netbsd GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-netbsd-32 -v ./cmd/${PROJECT_NAME}
+          
+          # OpenBSD
+          GOOS=openbsd GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-openbsd-64 -v ./cmd/${PROJECT_NAME}
+          GOOS=openbsd GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-openbsd-32 -v ./cmd/${PROJECT_NAME}
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: bin/
+          if-no-files-found: error
+
   release:
     name: Release
     needs: build
     if: github.event_name == 'release'
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - name: 'Download Artifact'
-        uses: actions/download-artifact@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
         with:
-          name: build
+          name: build-artifacts
           path: bin/
-      - name: List files
-        run: |
-          find ./bin
+
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           files: bin/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Go 1.x
-        uses: actions/setup-go@v2
-        with:
-          go-version: ^1.25
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
-      - name: Get dependencies
-        run: |
-          go get -v -t -d ./...
-          if [ -f Gopkg.toml ]; then
-              curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-              dep ensure
-          fi
-      - name: Build
-        env:
-          CGOENABLED: 0
-        run: |
-          mkdir bin || true
-          GOOS=linux GOARCH=386 go build -ldflags="-s -w  -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-32 -v ./cmd/${PROJECT_NAME}
-          GOOS=linux GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-64 -v ./cmd/${PROJECT_NAME}
-          GOOS=freebsd GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-freebsd-64 -v ./cmd/${PROJECT_NAME}
-          GOOS=freebsd GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-freebsd-32 -v ./cmd/${PROJECT_NAME}
-          GOOS=linux GOARCH=arm GOARM=7 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-arm7 -v ./cmd/${PROJECT_NAME}
-          GOOS=linux GOARCH=arm GOARM=6 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-arm6 -v ./cmd/${PROJECT_NAME}
-          GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-osx -v ./cmd/${PROJECT_NAME}
-          GOOS=windows GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-win64.exe -v ./cmd/${PROJECT_NAME}
-          GOOS=windows GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-win32.exe -v ./cmd/${PROJECT_NAME}
-          GOOS=netbsd GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-netbsd-64 -v ./cmd/${PROJECT_NAME}
-          GOOS=netbsd GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-netbsd-32 -v ./cmd/${PROJECT_NAME}
-          GOOS=openbsd GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-openbsd-64 -v ./cmd/${PROJECT_NAME}
-          GOOS=openbsd GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-openbsd-32  -v ./cmd/${PROJECT_NAME}
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v2
-        with:
-          name: build
-          path: bin/
