--- a/.github/workflows/golang.yaml
+++ b/.github/workflows/golang.yaml
@@ -34,30 +34,40 @@ jobs:
           mkdir -p bin
           
           # Linux
-          GOOS=linux GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-32 -v ./cmd/${PROJECT_NAME}
-          GOOS=linux GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-64 -v ./cmd/${PROJECT_NAME}
-          GOOS=linux GOARCH=arm GOARM=7 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-arm7 -v ./cmd/${PROJECT_NAME}
-          GOOS=linux GOARCH=arm GOARM=6 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-arm6 -v ./cmd/${PROJECT_NAME}
-          
-          # FreeBSD
-          GOOS=freebsd GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-freebsd-64 -v ./cmd/${PROJECT_NAME}
-          GOOS=freebsd GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-freebsd-32 -v ./cmd/${PROJECT_NAME}
+          GOOS=linux GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-386 ./cmd/${PROJECT_NAME}
+          GOOS=linux GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-amd64 ./cmd/${PROJECT_NAME}
+          GOOS=linux GOARCH=arm64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-arm64 ./cmd/${PROJECT_NAME}
+          GOOS=linux GOARCH=arm GOARM=7 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-arm7 ./cmd/${PROJECT_NAME}
+          GOOS=linux GOARCH=arm GOARM=6 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-linux-arm6 ./cmd/${PROJECT_NAME}
           
           # MacOS (Darwin)
-          GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-osx -v ./cmd/${PROJECT_NAME}
-          # Note: You might want to add darwin/arm64 for Apple Silicon here
+          GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-osx-amd64 ./cmd/${PROJECT_NAME}
+          GOOS=darwin GOARCH=arm64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-osx-arm64 ./cmd/${PROJECT_NAME}
           
           # Windows
-          GOOS=windows GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-win64.exe -v ./cmd/${PROJECT_NAME}
-          GOOS=windows GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-win32.exe -v ./cmd/${PROJECT_NAME}
+          GOOS=windows GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-win64.exe ./cmd/${PROJECT_NAME}
+          GOOS=windows GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-win32.exe ./cmd/${PROJECT_NAME}
           
           # NetBSD
-          GOOS=netbsd GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-netbsd-64 -v ./cmd/${PROJECT_NAME}
-          GOOS=netbsd GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-netbsd-32 -v ./cmd/${PROJECT_NAME}
+          GOOS=netbsd GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-netbsd-amd64 ./cmd/${PROJECT_NAME}
+          GOOS=netbsd GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-netbsd-386 ./cmd/${PROJECT_NAME}
+          GOOS=netbsd GOARCH=arm GOARM=6 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-netbsd-arm6 ./cmd/${PROJECT_NAME}
+          GOOS=netbsd GOARCH=arm GOARM=7 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-netbsd-arm7 ./cmd/${PROJECT_NAME}
+          GOOS=netbsd GOARCH=arm64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-netbsd-arm64 ./cmd/${PROJECT_NAME}
           
           # OpenBSD
-          GOOS=openbsd GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-openbsd-64 -v ./cmd/${PROJECT_NAME}
-          GOOS=openbsd GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-openbsd-32 -v ./cmd/${PROJECT_NAME}
+          GOOS=openbsd GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-openbsd-64 ./cmd/${PROJECT_NAME}
+          GOOS=openbsd GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-openbsd-32  ./cmd/${PROJECT_NAME}
+          GOOS=openbsd GOARCH=arm GOARM=6 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-openbsd-arm6 ./cmd/${PROJECT_NAME}
+          GOOS=openbsd GOARCH=arm GOARM=7 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-openbsd-arm7 ./cmd/${PROJECT_NAME}
+          GOOS=openbsd GOARCH=arm64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-openbsd-arm64 ./cmd/${PROJECT_NAME}
+          
+          # FreeBSD
+          GOOS=freebsd GOARCH=amd64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-freebsd-amd64 ./cmd/${PROJECT_NAME}
+          GOOS=freebsd GOARCH=386 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-freebsd-386 ./cmd/${PROJECT_NAME}
+          GOOS=freebsd GOARCH=arm GOARM=6 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-freebsd-arm6 ./cmd/${PROJECT_NAME}
+          GOOS=freebsd GOARCH=arm GOARM=7 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-freebsd-arm7 ./cmd/${PROJECT_NAME}
+          GOOS=freebsd GOARCH=arm64 go build -ldflags="-s -w -extldflags '-static'" -o bin/${PROJECT_NAME}-freebsd-arm64 ./cmd/${PROJECT_NAME}
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
